# pitch-mechanics-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/ground_truth/: IMG_3106_ground_truth.json  IMG_3107_ground_truth.json  IMG_3108_ground_truth.json  IMG_3109_ground_truth.json  pitchers.json
data/prompts/: adult_coaching_persona.md  coaching_knowledge.md  measurement_caveats.md  youth_coaching_persona.md
docs/brainstorms/: 2026-03-11-3d-pose-lifting-brainstorm.md
docs/plans/: 2026-03-10-feat-phase5-coaching-report-plan.md  2026-03-10-phase5-coaching-report-design.md  2026-03-10-pose-validation-design.md  2026-03-10-pose-validation-plan.md  2026-03-10-validation-framework-design.md  2026-03-10-validation-framework-plan.md  2026-03-11-feat-3d-pose-lifting-motionbert-execution-plan.md  2026-03-11-feat-3d-pose-lifting-motionbert-plan.md
scripts/: analyze_benchmarks.py  analyze_video.py  eval_consistency.py  eval_events.py  label_events.py  launch_app.py  prototype_3d_lift.py  run_batch_analysis.py  seed_players.py  validate_pose.py  youth_demo.py
src/: pipeline.py
src/biomechanics/: angles_3d.py  benchmarks.py  events.py  features.py  validation.py  youth_normalizer.py
src/coaching/: insights.py
src/desktop/: __init__.py  (+2 more)
tests/: conftest.py  test_angles_3d.py  test_benchmarks.py  test_coaching_integration.py  test_empty_poses.py  test_events.py  test_features.py  test_lifter.py  test_models.py  test_pipeline.py  test_pitchzone.py  test_report.py  test_skeleton.py  test_trajectories.py  test_validation.py  test_youth_normalizer.py
(+23 files in other folders)
