[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitch-mechanics-analyzer"
version = "0.1.0"
description = "Analyze youth/developing pitcher mechanics from video using computer vision and OBP benchmarks"
requires-python = ">=3.10"
license = {text = "Personal use only"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "mediapipe>=0.10",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "PyQt6>=6.5",
    "PyQt6-WebEngine>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
